# Kursach

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  camera.py  cmake_install.cmake  compile_commands.json  main.cpp  my_cool_app
